# orbslam3_ros2

./: CMakeLists.txt  README.md  package.xml
CMakeModules/: FindORB_SLAM3.cmake
config/: M300.yaml  QCar.yaml
scripts/: fire_detection.py
src/: bounding_box_visualization.cpp  fire_localization.cpp  fire_localization_GPS.cpp  global_localization.cpp  orbslam3_ros2.cpp  tools.h
