<?xml version="1.0"?>
<package format="3">
    <name>orbslam3_ros2</name>
    <version>1.0.0</version>
    <description>ROS2 wrapper for ORB_SLAM3 library</description>
    <maintainer email="q_qiaome@live.concordia.ca">Qiaomeng Qin</maintainer>
    <license>TODO</license>
    <author>Qiaomeng Qin</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>vision_msgs</exec_depend>
    <exec_depend>opencv</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>
    <depend>Pangolin</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
